DTGB-726: Fixed correct wrapping of breadcrumbs.
When a breadcrumb contains long page titles then they will wrapped within the li on a separate line (inline-block).
Better to display them inline.

--- a/components/31-molecules/breadcrumbs/_breadcrumbs.scss
+++ b/components/31-molecules/breadcrumbs/_breadcrumbs.scss
@@ -9,7 +9,7 @@
     li {
       @include icon('chevron-right', 'after');
 
-      display: inline-block;
+      display: inline;
       margin-right: .4rem;
 
       &::after {
